--- a/cloud-init.yaml
+++ b/cloud-init.yaml
@@ -19,8 +19,8 @@ write_files:
         HOSTNAMES=()
         for dns in $DNSES; do
             hostname=($${dns})
-            if [ "$hostname" != "$${HOSTNAME}.$${AWS_DEFAULT_REGION^^}.COMPUTE.INTERNAL" ]; then
-              HOSTNAMES+="$${hostname^^} "
+            if [ "$hostname" != "$${HOSTNAME}.$${AWS_DEFAULT_REGION}.compute.internal" ]; then
+              HOSTNAMES+="$${hostname} "
             fi
         done
 
@@ -37,10 +37,10 @@ write_files:
 
           NEW_HOSTNAMES=()
           for hostname in $HOSTNAMES; do
-            rabbitmqctl join_cluster rabbit@$${hostname^^}
+            rabbitmqctl join_cluster rabbit@$${hostname}
             st=$?
             if [ $st -ne 0 ] && [ $st -ne 130 ]; then  # 130 is "already joined"
-              NEW_HOSTNAMES+=( $${hostname^^} )
+              NEW_HOSTNAMES+=( $${hostname} )
             fi
           done
 
@@ -58,7 +58,7 @@ write_files:
         docker exec rabbitmq rabbitmqctl set_user_tags admin administrator
         docker exec rabbitmq rabbitmqctl add_user rabbit ${rabbit_password}
         docker exec rabbitmq rabbitmqctl add_vhost /
-        docker exec rabbitmq rabbitmqctl set_policy -p / ha-three "^" '{"ha-mode":"exactly", "ha-params":${sync_node_count}, "ha-sync-mode":"automatic", "message-ttl":${message_timeout}, "expires":${message_timeout}}'
+        docker exec rabbitmq rabbitmqctl set_policy -p / ha-two "^" '{"ha-mode":"exactly", "ha-params":${sync_node_count}, "ha-sync-mode":"automatic", "message-ttl":${message_timeout}, "expires":${message_timeout}}'
         docker exec rabbitmq rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
         docker exec rabbitmq rabbitmqctl set_permissions -p / rabbit ".*" ".*" ".*"
         docker exec rabbitmq rabbitmqctl delete_user guest
@@ -69,7 +69,7 @@ runcmd:
   - service docker start
   - chkconfig docker on
   - usermod -a -G docker ec2-user
-  - docker run -d --name rabbitmq --hostname $${HOSTNAME^^}.US-WEST-2.COMPUTE.INTERNAL -p 4369:4369 -p 5672:5672 -p 15672:15672 -p 25672:25672 -e RABBITMQ_ERLANG_COOKIE='${secret_cookie}' -e RABBITMQ_USE_LONGNAME=true -v /root/data:/var/lib/rabbitmq -v /root/conf/:/etc/rabbitmq -v /root/bin:/tmp/bin rabbitmq:3-management
+  - docker run -d --name rabbitmq --hostname $${HOSTNAME}.${region}.compute.internal -p 4369:4369 -p 5672:5672 -p 15672:15672 -p 25672:25672 -e RABBITMQ_ERLANG_COOKIE='${secret_cookie}' -e RABBITMQ_USE_LONGNAME=true -v /root/data:/var/lib/rabbitmq -v /root/conf/:/etc/rabbitmq -v /root/bin:/tmp/bin rabbitmq:3-management
   - sleep 1
   - docker exec rabbitmq bash /tmp/bin/join_cluster.sh $(bash /root/find_hosts.sh)
   - sleep 1
